--- a/public/profil.html
+++ b/public/profil.html
@@ -170,7 +170,7 @@
             </div>
             <div class="downloadable">
                 <h1 class="downloadable-title">Curriculum Vitae (CV)</h1>
-                <img src="img/cv-site.png" alt="Aperçu de mon cv" class="downloadable-picture">
+                <img src="downloadable/cv-site.jpg" alt="Aperçu de mon cv" class="downloadable-picture">
                 <a href="downloadable/cv-site.pdf" class="download" download="cv-rdurand" target="_blank">Télécharger mon CV</a>
             </div>
         </main>
